yamlFiles/yolov5-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yolov5-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yolov5-cloud2
spec:
  hosts:
  - "*"
  gateways:
  - yolov5-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: yolov5-cloud2
        port:
          number: 5000
